<resources>
    <string name="app_name">BottomNavi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Main_title">내 손안의</string>
    <string name="highlight_title">근로계약서</string>
    <string name="search">내 계약서 검색하기</string>
    <string name="addcamera">카메라로 추가하기</string>
    <string name="addphoto">갤러리로 추가하기</string>
</resources>